--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
     Hello
 
-    <input type="button" id="send">
+    <a id="send">Spark</a>
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
     <script>
         var socket = io();
         $('#send').click(function (event) {
-            socket.emit('new-data', 'foo');
+            socket.emit('new-data', '*S:1,1*');
         });
     </script>
 
