--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <html>
+<head>
+<style type="text/css">
+    .box {
+        width:50px;
+        height:50px;
+        colour:blue;
+    }
+</style>
+</head>
 <body>
     Hello
 
-    <a id="send">Spark</a>
+    <div class="box" id="box0">
+    <div class="box" id="box1">
+    <div class="box" id="box2">
+    <div class="box" id="box3">
+    <div class="box" id="box4">
+    <div class="box" id="box5">
+    <div class="box" id="box6">
+    <div class="box" id="box7">
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
 
     <script>
         var socket = io();
-        $('#send').click(function (event) {
-            socket.emit('new-data', '*S:1,1*');
+        $('#box0').mouseOver(function (event) {
+            socket.emit('new-data', '*S:0,0*');
+        });
+        $('#box1').mouseOver(function (event) {
+            socket.emit('new-data', '*S:1,0*');
+        });
+        $('#box2').mouseOver(function (event) {
+            socket.emit('new-data', '*S:2,0*');
+        });
+        $('#box3').mouseOver(function (event) {
+            socket.emit('new-data', '*S:3,0*');
+        });
+        $('#box4').mouseOver(function (event) {
+            socket.emit('new-data', '*S:4,0*');
+        });
+        $('#box5').mouseOver(function (event) {
+            socket.emit('new-data', '*S:5,0*');
+        });
+        $('#box6').mouseOver(function (event) {
+            socket.emit('new-data', '*S:6,0*');
+        });
+        $('#box7').mouseOver(function (event) {
+            socket.emit('new-data', '*S:7,0*');
         });
     </script>
 
