--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     .box {
         width:50px;
         height:50px;
-        colour:blue;
+        background-color:blue;
+        margin:1px;
     }
 </style>
 </head>
 <body>
     Hello
 
-    <div class="box" id="box0">
-    <div class="box" id="box1">
-    <div class="box" id="box2">
-    <div class="box" id="box3">
-    <div class="box" id="box4">
-    <div class="box" id="box5">
-    <div class="box" id="box6">
-    <div class="box" id="box7">
+    <div class="box" id="box0"></div>
+    <div class="box" id="box1"></div>
+    <div class="box" id="box2"></div>
+    <div class="box" id="box3"></div>
+    <div class="box" id="box4"></div>
+    <div class="box" id="box5"></div>
+    <div class="box" id="box6"></div>
+    <div class="box" id="box7"></div>
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
