--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <head>
 <style type="text/css">
     .box {
-        width:50px;
-        height:50px;
-        background-color:blue;
-        margin:1px;
+        width: 50px;
+        height: 50px;
+        background-color: blue;
+        margin: 1px;
+        float: left;
     }
 </style>
 </head>
 <body>
-    Hello
+    <h1>Falling Rain</h1>
 
     <div class="box" id="box0"></div>
     <div class="box" id="box1"></div>
@@ -26,28 +27,28 @@
 
     <script>
         var socket = io();
-        $('#box0').mouseOver(function (event) {
+        $('#box0').mouseover(function (event) {
             socket.emit('new-data', '*S:0,0*');
         });
-        $('#box1').mouseOver(function (event) {
+        $('#box1').mouseover(function (event) {
             socket.emit('new-data', '*S:1,0*');
         });
-        $('#box2').mouseOver(function (event) {
+        $('#box2').mouseover(function (event) {
             socket.emit('new-data', '*S:2,0*');
         });
-        $('#box3').mouseOver(function (event) {
+        $('#box3').mouseover(function (event) {
             socket.emit('new-data', '*S:3,0*');
         });
-        $('#box4').mouseOver(function (event) {
+        $('#box4').mouseover(function (event) {
             socket.emit('new-data', '*S:4,0*');
         });
-        $('#box5').mouseOver(function (event) {
+        $('#box5').mouseover(function (event) {
             socket.emit('new-data', '*S:5,0*');
         });
-        $('#box6').mouseOver(function (event) {
+        $('#box6').mouseover(function (event) {
             socket.emit('new-data', '*S:6,0*');
         });
-        $('#box7').mouseOver(function (event) {
+        $('#box7').mouseover(function (event) {
             socket.emit('new-data', '*S:7,0*');
         });
     </script>
