--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
         margin: 1px;
         float: left;
     }
+    #led-wall {
+        height: 500px;
+        width: 64px;
+        background-color: white;
+        border: 1px solid black;
+        position: absolute;
+        left: 10px;
+    }
 </style>
 </head>
 <body>
     <h1>Falling Rain</h1>
-
+<!--
     <div class="box" id="box0"></div>
     <div class="box" id="box1"></div>
     <div class="box" id="box2"></div>
@@ -21,12 +29,22 @@
     <div class="box" id="box5"></div>
     <div class="box" id="box6"></div>
     <div class="box" id="box7"></div>
+    -->
+
+    <div id="led-wall"></div>
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
 
     <script>
         var socket = io();
+        $('#led-wall').mousemove(function (event) {
+            var parentOffset = $(this).offset();
+            var x = Math.ceil((event.pageX - parentOffset.left) / 8); //4
+            var y = Math.ceil((event.pageY - parentOffset.top) / 4);  //8
+            socket.emit('new-data', '*S:'+x+','+y+'*');
+            console.log(x, y);
+        });
         $('#box0').mouseover(function (event) {
             socket.emit('new-data', '*S:0,0*');
         });
