--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
+<!DOCTYPE html>
 <html>
 <head>
-<style type="text/css">
-    .box {
-        width: 50px;
-        height: 50px;
-        background-color: blue;
-        margin: 1px;
-        float: left;
-    }
-    #led-wall {
-        height: 500px;
-        width: 64px;
-        background-color: white;
-        border: 1px solid black;
-        position: absolute;
-        left: 10px;
-    }
-</style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Falling Rain</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <style type="text/css">
+        body {
+            background-color: #edece4;
+        }
+        .box {
+            width: 50px;
+            height: 50px;
+            background-color: blue;
+            margin: 1px;
+            float: left;
+        }
+        #led-wall {
+            height: 500px;
+            width: 64px;
+            background-color: white;
+            border: 1px solid black;
+            position: absolute;
+            left: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Falling Rain</h1>
@@ -38,11 +50,15 @@
 
     <script>
         var socket = io();
+        socket.on('new-data', function(data){
+            //console.log(data);
+        });
         $('#led-wall').mousemove(function (event) {
             var parentOffset = $(this).offset();
             var x = Math.ceil((event.pageX - parentOffset.left) / 8); //4
             var y = Math.ceil((event.pageY - parentOffset.top) / 4);  //8
             socket.emit('new-data', '*S:'+x+','+y+'*');
+            socket.emit('new-data', {x:x, y:y});
             console.log(x, y);
         });
         $('#box0').mouseover(function (event) {
