--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     </style>
 </head>
 <body>
-
-    <div id="led-wall" class="side-panel"></div>
     
+    <div class="side-panel">
+        <div id="led-wall"></div>
+    </div>
     <div class="side-panel">
         <h1>Falling Rain</h1>
     
