--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 var x = (touchX - parentOffset.left);
                 var y = (touchY - parentOffset.top);
 
-                x = map(x, 0, wallWidth, 0, 8);
-                y = map(y, 0, wallHeight, 0, 125);
+                x = map(x, 0, wallWidth, 0, 7);     // 8 choices, 0 - 7
+                y = map(y, 0, wallHeight, 0, 124);  // 125 choices, 0 - 124
                 
-                if ((x < 0 || x > 8) || (y < 0 || y > 125)) {
+                if ((x < 0 || x > 7) || (y < 0 || y > 124)) {
                     // Out of range
                     return;
                 }
