--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Message</label>
+                        <label for="colour">Colour</label>
+                        <input type="text" class="form-control" id="colour" placeholder="" value="120">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
                         <input type="text" class="form-control" id="message" placeholder="">
                     </div>
                     <button class="btn btn-default" id="sendMessage">Send</button>
@@ -155,7 +159,7 @@
                 }
 
                 var type   = $('input[name=type]:checked').val();
-                var colour = 120;
+                var colour = $('#colour').val();
 
                 socket.emit('new-data', {clientId: clientId, type:type, x:x, y:y, colour:colour});
                 //console.log(type, x, y);
@@ -164,7 +168,7 @@
             $('#sendMessage').click(function (event) {
                 event.preventDefault();
                 var message = $('#message').val();
-                var colour  = 120;
+                var colour  = $('#colour').val();
                 socket.emit('new-data', {clientId: clientId, type:'M', message: message, colour:colour});
                 $('#message').val('');
             });
