--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="form-group">
                         <label for="colour">Colour</label>
-                        <input type="text" class="form-control" id="colour" placeholder="" value="120">
+                        <input type="range" class="form-control" id="colour" value="120" min="0" max="360" step="1">
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
