--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     ctx.clearRect(0, 0, 8 * xScale, 125);
                     
                     // Draw a marker
-                    ctx.fillStyle = 'hsl(' + data.colour + ', 100, 50)';
+                    ctx.fillStyle = 'hsl(' + data.colour + ', 100%, 50%)';
                     ctx.beginPath();
                     ctx.arc(x, y, 1, 0, Math.PI * 2, true);
                     ctx.fill();
