--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
                         <label for="message">Message</label>
                         <input type="text" class="form-control" id="message" placeholder="">
                     </div>
-                    <button class="btn btn-default" id="sendMessage">Send</button>
-                    <button class="btn btn-default" id="clearColumns">Clear</button>
+                    <div class="form-group">
+                        <button class="btn btn-success" id="sendMessage">Send</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-default" id="clearColumns">Clear columns</button>
+                    </div>
                 </form>
 
                 <div id="connected-users">
