--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         
         function checkDisplayConnection() {
             var difference = lastHeartbeat - new Date();
-            $('#timeSinceLastContact').txt(difference);
+            $('#timeSinceLastContact').text(difference);
         }
         
         function map(x, in_min, in_max, out_min, out_max) {
