--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                         <label for="colour">Colour</label>
                         <input type="range" class="form-control" id="colour" value="120" min="0" max="360" step="1">
                     </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <input type="text" class="form-control" id="message" placeholder="">
-                    </div>
-                    <div class="form-group">
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <input type="text" class="form-control" id="message" placeholder="">
+                        </div>
                         <button class="btn btn-success" id="sendMessage">Send</button>
                     </div>
                     <div class="form-group">
@@ -101,7 +101,7 @@
 
                 <div id="meta-data">
                     Connected users: <span id="connectedUserCount"></span><br>
-                    Time since last contact: <span id="timeSinceLastContact"></span><br>
+                    Time since last pi checkin: <span id="timeSinceLastContact"></span><br>
                     <span id="displayErrorMessage"></span>
                 </div>
             </div>
@@ -247,8 +247,9 @@
         
         function checkDisplayConnection() {
             if (lastHeartbeat) {
-                var difference = (new Date() - lastHeartbeat);
-                $('#timeSinceLastContact').text(difference / 1000);
+                var difference = Math.round((new Date() - lastHeartbeat) / 100);
+                
+                $('#timeSinceLastContact').text((difference / 10) + 's');
                 if (screenProblem) {
                     $('#displayErrorMessage').text("Error with display");
                 } else {
