--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <label for="colour">Colour</label>
                         <input type="range" class="form-control" id="colour" value="120" min="0" max="360" step="1">
                     </div>
-                    <div class="row">
+                    <div class="row form-group">
                         <div class="col-sm-12">
                             <label for="message">Message</label>
                             <div class="input-group">
